stop new tab button from overlapping window controls

--- a/src/browser-frontend/views/browser/chrome/tabbar.css
+++ b/src/browser-frontend/views/browser/chrome/tabbar.css
@@ -27,5 +27,5 @@ specific language governing permissions and limitations under the License.
 
 .tabbar.linux,
 .tabbar.win32 {
-  margin-right: 70px;
+  margin-right: 120px;
 }
